[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.3.9"
thread = "0.1.0"
log = "0.4"
env_logger = "0.9.0"
rand = "0.8.5"
atomic-counter = "1.0.1"
beep = "0.3.0"
device_query="0.1.0"
